# relay_board_control

./: .gitignore  README.md  board_config.py  demo_relay.py  relay_test.py
firmware/: flash_app_v1.4.0.bat
firmware/app-esp32s3/: CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/app-esp32s3/main/: CMakeLists.txt  gpio_cmd.c  main.c  nvs_cmd.c  version.c
firmware/app-esp32s3/main/include/: gpio_cmd.h  nvs_cmd.h
firmware/components/app_http/: CMakeLists.txt  http_cmd.c  tf_http.c
firmware/components/app_http/include/: http_cmd.h  tf_http.h
firmware/components/app_wifi/: CMakeLists.txt  wifi_cmd.c  wifi_ctrl.c  wifi_scan.c
firmware/components/app_wifi/include/: wifi_ctrl.h  wifi_scan.h
firmware/components/cmd_proc/: CMakeLists.txt  cmd_proc.c
firmware/components/cmd_proc/include/: cmd_proc.h
firmware/components/test_comm/: CMakeLists.txt  test_comm.c
firmware/components/test_comm/include/: test_comm.h
firmware/components/watchdog/: .cproject  .project  CMakeLists.txt  watchdog.c
firmware/components/watchdog/include/: watchdog.h
relay_lib/: app_utils.py  board_control.py  gpio_control.py  http_api.py  relay_control.py  test_comm.py  wifi_comm.py
scripts/relay_lib/: gpio_control.py  relay_control.py  test_comm.py
